@@ -1,3 +1,8 @@
+2008-04-23  Dan Nicolaescu  <dann@ics.uci.edu>
+
+	* vc.el (vc-next-action): Look at more than the first file to
+	determine the state.
+
 2008-04-23  Glenn Morris  <rgm@gnu.org>
 
 	* dframe.el (dframe-have-timer-flag): Drop support for Emacs without
